k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitness-app
  namespace: fitness-app
spec:
  selector:
    app: fitness-app
  ports:
    - port: 80
      targetPort: 8000
